# crux

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml
eval/: analyze_results.py  metrics.py  resolve_ot_deps.py  run_crux.py  run_ot_ips.py
eval/benchmarks/designs_b/: design_b1.v  design_b2.v  design_b3.sdc  design_b3.v
eval/benchmarks/large/: cdc_primitives.v  crux_bench_large.sdc  crux_bench_large.v  dma_engine.v  interrupt_controller.v  power_manager.v  spi_bridge.v  uart_subsystem.v  watchdog.v
eval/benchmarks/small/: crux_bench_small.sdc  crux_bench_small.v  ground_truth.yaml
eval/combined/: aon_timer_run1.json  aon_timer_run1_log.txt
eval/llm_baseline/: CLAUDE.md  run_baseline.sh
eval/llm_baseline/results/: aon_timer_run1.json  aon_timer_run1_log.txt  b1_run1.json  (+7 more)
eval/results/: combined_results.md  comparison.md  ot_ip_results.json
src/crux/: __init__.py  __main__.py  accellera_parser.py  cdc_check.py  cli.py  clock_domains.py  formal.py  gray_code.py  handshake.py  netlist.py  rdc.py  reconvergence.py  report.py  sdc_parser.py  synchronizers.py  trace.py  waivers.py  yosys_runner.py
tests/: conftest.py  test_integration.py
tests/constraints/: earlgrey_cdc.sdc  engineer_scenario.sdc  example.cdcspec  realistic_soc.sdc
tests/designs/: clock_mux_safe.v  combo_before_sync.v  engineer_scenario.v  gray_cdc.v  handshake_cdc.v  multi_bit_cdc.v  rdc_missing_sync.v  rdc_proper_sync.v  realistic_soc.v  reconvergence_mux.v  reconvergence_unsafe.v  simple_cdc.v  simple_sync.v  three_domains.v
tests/waivers/: realistic_soc.yaml
